# genai

./: .eslintrc.json  .gitignore  .npmrc  .nvmrc  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  CONTENT.md  LICENSE  README.md  contributing.md  index.html  invert_svg.sh  jest.config.js  link_cache.csv  mkdocs.yml  next.config.mjs  package-lock.json  package.json  requirements.md  requirements.txt  requirements_frozen_working.txt  rewrite.sh  setup.py  short_requirements.txt  sitemap.xml  supernal.yaml  syntax_check.py  tailwind.config.js  tailwind.config.ts  test_parallel_shell.py  to_sort.html  tsconfig.json  vercel.json
Background/: index.html
Engineering/: index.html  (+22 more)
genai/gui/mana-guide/: .gitignore  README.md  pyproject.toml  raft_state.json  requirements.txt  requirements_backup.txt  setup.py
genai/gui/mana-guide/mana_guide/: ingest.py  ingestback.py  utils.py
genai/gui/mana-guide/mana_guide/components/: chain.py  constants.py  langchain_parser.py  llm.py  loaders.py  test_llm_raw.py
genai/gui/mana-guide/mana_guide/components/evaluation/: rag_retrieval_base.py  rag_retrieval_ragas.py
genai/gui/mana-guide/mana_guide/components/utils/: __init__.py  common.py  pylogger.py  utils.py
genai/gui/mana-guide/mana_guide/configs/: ingest.yaml
genai/gui/mana-guide/mana_guide/explorations/: test_chat.py
genai/gui/mana-guide/mana_guide/gui/: StreamlitChatMessageHistory.py  entry_point.py
genai/gui/mana-guide/mana_guide/gui/pages/: BaseChat_1.py  Settings_3.py  mrkl_demo_2.py
genai/gui/mana-guide/mana_guide/services/: start_qdrant.py  start_sqlite.py
(+1712 files in other folders)
